Fixed horizontal scroll bar appearing with some widths, no need to have both all paddings and width. Trust layout to figure things out;)

--- a/main.css
+++ b/main.css
@@ -301,7 +301,7 @@ header img:hover {
             box-sizing: border-box;
         }
         section .container {
-            width: 70vw;
+            /* width: 68vw; */
             padding: 0 15vw;
         }
         #face {
